--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,14 @@ wheels/
 *.egg
 MANIFEST
 
+#cursor 관련
+.cursorrules    
+.cursor
+.cursorignore
+.cursorignorerules
+.gursor\rules
+*.mdc
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
