--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,10 @@ test_output/
 tests/
 # cursor 관련
 cursorrules/
-cursor/
+.cursor/
 cursorignore/
 cursorignorerules/
-gursor\rules/
+.cursor/rules/
 *.mdc
 
 # PyInstaller
