AniDB API 연결 문제 해결: AUTH 명령 형식 수정 및 개발 모드 개선

--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,17 @@ logs/
 
 # Custom ignored directories
 temp/
-tmp/ 
+tmp/
+
+# Database
+*.db
+
+# IDE settings
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Project specific
+anime_sorter.log
+config.json 
