--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
-asyncio>=3.4.3
-pathlib>=1.0.1 
+# 의존성 관리
+# 코어 라이브러리
+PySide6>=6.0.0
+SQLAlchemy>=2.0.0
+watchdog>=3.0.0
+
+# 미디어 처리
+ffmpeg-python>=0.2.0
+pymediainfo>=6.0.0
+
+# 외부 API 통합
+requests>=2.0.0
+
+# 개발 도구
+pytest>=7.0.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
+isort>=5.0.0 
+sadisplay>=0.4.9 
